﻿History
-------

ASAP 3.0.1 (2011-07-15)::

- Uses linear interpolation for resampling (try Toxic_Cream.sap).
- Displays titles of RMT, TMC and TM2 files.
- The GSPlayer plugin now works on new Windows Mobile versions.
- The Android player can play files directly from ZIP archives.
- asapconv can auto-detect the native format (`asapconv -o .%e *.sap`).
- asapconv can relocate modules (`asapconv --address=a000 -o relocated.tmc original.tmc`).
- asapconv can write metadata to WAV files.
- Created an experimental plugin for GStreamer (requires GStreamer with https://bugzilla.gnome.org/show_bug.cgi?id=654295[this bug] fixed).
- Converted XEX files disable the built-in BASIC.
- Converted XEX files clear the I flag for the TYPE D PLAYER routine.
- Doublequotes and pipes are now allowed characters in the AUTHOR and NAME tags.


ASAP 3.0.0 (2011-05-24)::

New ports;;
- Created a desktop player for the http://www.adobe.com/products/air/[Adobe AIR] platform.
- Ported the Windows Media Player plugin to Windows CE.
- Created a setup package with the Windows Explorer plugin for 64-bit Windows.
- The Audacious plugin supports Audacious 2.5.
- Created RPM packages with asapconv, ASAP C library and the XMMS plugin.
- Created ASAP2WAV and a simple player in the D programming language.
- JavaScript ASAP2WAV now runs in DMDScript and JScript.NET.

Emulation accuracy;;
- Corrected ANTIC and POKEY timings.
- Implemented STIMER, NMIST and NMIRES hardware registers.
- Made the CONSOL register readable.
- Fixed and optimized undocumented 6502 instructions.

Usability improvements;;
- Conversion to Atari executables (XEX format, also known as COM).
- RMT files can be extracted from SAP files created in Raster Music Tracker.
- Implemented subsongs, seek bar and pause in the Android port.
- Added a date picker in the WASAP/Winamp/Apollo/XMPlay file information window.
- The FASTPLAY tag can be up to 32767 (previously 312).
- Browser JavaScript player works on `file:///` URLs.