@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.sf.asap" android:versionCode="301" android:versionName="3.0.1">
+	package="net.sf.asap" android:versionCode="310" android:versionName="3.1.0">
 	<uses-sdk android:minSdkVersion="4" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:label="@string/app_name" android:icon="@drawable/icon" android:description="@string/app_description" android:theme="@style/Theme">
