@@ -11,6 +11,6 @@
 	<string name="stop_button">Stop</string>
 	<string name="song_format">Song %d of %d</string>
 	<string name="menu_about">About</string>
-	<string name="about_title">About ASAP 3.0.1</string>
+	<string name="about_title">About ASAP 3.1.0</string>
 	<string name="about_message">Another Slight Atari Player (C) 2005-2011 Piotr Fusik\nCMC, MPT, TMC, TM2 players (C) 1994-2005 Marcin Lewandowski\nRMT player (C) 2002-2005 Radek Sterba\nDLT player (C) 2009 Marek Konopka\nCMS player (C) 1999 David Spilka\nFC player (C) 2011 Jerzy Kut\n\nThis program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.</string>
 </resources>
