@@ -2,6 +2,6 @@ Manifest-Version: 1.0
 MIDlet-1: ASAP, , ASAPMIDlet
 MIDlet-Name: ASAP
 MIDlet-Vendor: Piotr Fusik
-MIDlet-Version: 3.0.1
+MIDlet-Version: 3.1.0
 MicroEdition-Configuration: CLDC-1.1
 MicroEdition-Profile: MIDP-2.0
